prevent flashes invisible text

--- a/modern-ssr-nextjs/tvshow/styles/globals.css
+++ b/modern-ssr-nextjs/tvshow/styles/globals.css
@@ -24,4 +24,5 @@ ul {
 @font-face {
   font-family: 'raleway';
   src: url('../public/fonts/raleway/Raleway-Regular.ttf') format('truetype');
+  font-display: swap
 }
